# gpb_parser

./: .gitignore  CMakeLists.txt  LOG.h  License.txt  PbPath.cpp  PbPath.h  README.md  build.sh  build_release.sh  clean.sh  family.proto  generate-test.sh  gpb_msg_parser.cpp  gpb_msg_parser.h  gpb_parser.cbp  main  main.cpp  msg_parser.h  start-protoc.sh  test
doc/: pbpath.tgz
message/: family.proto  testmsg.proto
src/: LOG.cpp  LOG.h  PbPath.cpp  PbPath.h  main.cpp  pbpath.hpp  test-efficiency.cpp
test/: main.cpp  test-efficiency.cpp
